[package]
name = "quavertrack-backend"
version = "0.1.0"
authors = ["Casey Primozic <casey@cprimozic.net>"]
edition = "2018"

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket.git", rev = "549c9241c41320fc5af76b53c2ffc3bd8db88f8c" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket.git", rev = "549c9241c41320fc5af76b53c2ffc3bd8db88f8c", features = ["json", "diesel_postgres_pool", "compression"] }
diesel = { version = "1.4", features = ["chrono", "postgres"] }
tokio = { version = "0.2", features = ["macros", "rt-threaded", "rt-util", "time", "blocking"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
serde = "1"
serde_json = "1"
thiserror = "1.0"
dotenv = "0.15"
fnv = "1.0"

libquavertrack = { path = "../libquavertrack" }
