[package]
name = "quavertrack-backend"
version = "0.1.0"
authors = ["Casey Primozic <casey@cprimozic.net>"]
edition = "2018"

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket.git", rev = "786db9b832b7edd91f143b24835677c69121a9bb", features = ["json"] }
rocket_sync_db_pools = { git = "https://github.com/SergioBenitez/Rocket.git", rev = "786db9b832b7edd91f143b24835677c69121a9bb", features = ["diesel_postgres_pool"]}
diesel = { version = "1.4", features = ["chrono", "postgres"] }
tokio = { version = "1.32", features = ["macros", "time"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
serde = "1"
serde_json = "1"
thiserror = "1.0"
dotenv = "0.15"
fnv = "1.0"

libquavertrack = { path = "../libquavertrack" }

[profile.release]
debug=true
