[package]
authors = ["Casey Primozic <me@ameo.link>"]
edition = "2018"
name = "libquavertrack"
version = "0.1.0"

[dependencies]
diesel = { version = "1.4", features = ["chrono", "postgres"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.10", features = ["json"] }
tokio = "0.2"
thiserror = "1.0"
